- Background flicker on page load in Profiles. @done - Fix SockJS url; VPN issue on production. @done

--- a/framebuzz/static/framebuzz/profiles/sass/screen.scss
+++ b/framebuzz/static/framebuzz/profiles/sass/screen.scss
@@ -361,6 +361,7 @@ body.profiles {
                 }
 
                 #profile-content {
+                    background: #05171E;
                     min-height: 1129px;
                     padding-right: 14px;
                     height: 100%;
@@ -478,10 +479,12 @@ body.profiles {
                         }
 
                         div.responsive-timeline {
+                            background: #05171E;
                             margin: -5px 0 0;
                             font-family: "ff-dagny-web-pro", sans-serif;
 
                             div.container {
+                                background: #05171E;
                                 min-height: 605px;
                             }
 
